--- a/README
+++ b/README
@@ -38,3 +38,10 @@ The HTML follows these simple pattern:
         <h1>Dialog 2</h1>
       </form>
     </div>
+
+Credits
+-------
+
+Created by Thomas Yip
+
+(c) 2011 BeeDesk, Inc. See LICENSE.txt for license.
